Ajustes endpoints