@@ -19,7 +19,8 @@
     <properties>
         <java.version>24</java.version>
         <jooq.version>3.18.7</jooq.version>
-        <springdoc.version>2.3.0</springdoc.version>
+        <lombok.version>1.18.38</lombok.version>
+        <springdoc.version>2.8.8</springdoc.version>
     </properties>
 
     <dependencies>
@@ -56,6 +57,13 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
 
@@ -148,7 +156,7 @@
         </dependency>
     </dependencies>
 
-    <build>
+    <!-- <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -162,6 +170,184 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build> -->
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
+                <configuration>
+                    <release>${java.version}</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.4.4</version>
+                <configuration>
+                    <jvmArguments>
+                        -Dorg.apache.lucene.store.MMapDirectory.enableMemorySegments=false --add-modules
+                        jdk.incubator.vector
+                    </jvmArguments>
+                    <mainClass>com.natanconstrutora.NatanBackendApplication</mainClass>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
+            <!-- <plugin>
+                <groupId>org.jooq</groupId>
+                <artifactId>jooq-codegen-maven</artifactId>
+                <version>${jooq.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <skip>${skip.generate.source.jooq}</skip>
+                    <jdbc>
+                        <driver>org.postgresql.Driver</driver>
+                        <url>jdbc:postgresql://localhost:5432/empresa</url>
+                        <user>postgres</user>
+                        <password>admin</password>
+                    </jdbc>
+                    <generator>
+                        <database>
+                            <name>org.jooq.meta.postgres.PostgresDatabase</name>
+                            <includes>
+                                anotacoes |
+                                categoria |
+                                categoria_equipamentos |
+                                cidade |
+                                cliente |
+                                conversas |
+                                desconto |
+                                desconto |
+                                endereco |
+                                estado |
+                                estoque |
+                                fornecedor |
+                                historico_preco |
+                                historico_status_servico |
+                                item_pedido |
+                                mensagens |
+                                organizacao |
+                                pais |
+                                participantes_conversa |
+                                password_reset_token |
+                                pedido |
+                                perfil |
+                                precos_regionais |
+                                produto |
+                                produto_fornecedor |
+                                regioes |
+                                servico |
+                                status_categoria |
+                                status_servico |
+                                subcategoria |
+                                usuario |
+                                usuario_foto |
+                                usuario_organizacao |
+                                usuario_perfil |
+                                usuario_recuperar_senha |
+                                usuario_subcategoria
+                            </includes>
+                            <inputSchema>public</inputSchema>
+                            <outputSchema>public</outputSchema>
+                            <properties>
+                                <property>
+                                    <key>generateForeignKeys</key>
+                                    <value>false</value>
+                                </property>
+                            </properties>
+                        </database>
+                        <target>
+                            <packageName>com.dasad.empresa.jooq.model</packageName>
+                            <directory>src/main/java</directory>
+                        </target>
+                    </generator>
+                </configuration>
+            </plugin> -->
+
+            <!-- <plugin>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <outputDir>${project.build.directory}/generated-sources/openapi</outputDir>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin> -->
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>12.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <failBuildOnCVSS>7</failBuildOnCVSS>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
 </project>
